crates/config-derive/tests/ui/merge/enum.stderr
error: enums are not supported with #[derive(Merge)]
  --> ./tests/ui/merge/enum.rs:22:10
   |
22 | #[derive(azalia_config_derive::Merge)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `azalia_config_derive::Merge` (in Nightly builds, run with -Z macro-backtrace for more info)
